fix password not showing error

--- a/layout/css/common.css
+++ b/layout/css/common.css
@@ -36,7 +36,8 @@ html {overflow-y: scroll;}
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,pre,a,abbr,acronym,address,big,cite,code,
 del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,select,button,
 ul,li,fieldset,form,label,legend,caption,tbody,tfoot,thead,tr,textarea {margin: 0;padding: 0;}
-body,td,form,select,input,button,textarea,div,option,pre,p,span,li,dt,dd {color: var(--korqar-gray);font-family: "NanumSquare", "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;font-size: 14px;}
+body,td,form,select,button,textarea,div,option,pre,p,span,li,dt,dd {color: var(--korqar-gray);font-family: "NanumSquare", "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;font-size: 14px;}
+input {color: var(--korqar-gray);font-family: "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;font-size: 14px;}
 fieldset,img {border: none;}
 dl,ul,ol,menu,li {list-style: none;}
 blockquote,q {quotes: none;}
